# api-python-client

./: .buildinfo  .gitignore  API_Guide.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  scratch.ipynb  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: API_Guide.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/Code_Examples/: Discover_Data_Availability.doctree  Discover_Data_Products.doctree  Discover_Deployments.doctree  Discover_Device_Categories.doctree  Discover_Devices.doctree  Discover_Locations.doctree  Discover_Properties.doctree  Download_Archived_Files.doctree  Download_Data_Products.doctree  Request_Real_Time_Data.doctree  index.doctree
.doctrees/Tutorial/: Oceans_3.0_API_Tutorial.doctree  index.doctree  onc_Library_Tutorial.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/onc/: index.doctree
.github/workflows/: ci.yml  doc.yml  release.yml
Code_Examples/: Discover_Data_Availability.html  Discover_Data_Products.html  Discover_Deployments.html  Discover_Device_Categories.html  Discover_Devices.html  Discover_Locations.html  Discover_Properties.html  Download_Archived_Files.html  Download_Data_Products.html  Request_Real_Time_Data.html  index.html
Tutorial/: Oceans_3.0_API_Tutorial.html  index.html  onc_Library_Tutorial.html
_modules/: index.html
_modules/onc/: onc.html
_modules/onc/util/: util.html
_sources/: API_Guide.md.txt  index.md.txt
_sources/Code_Examples/: Discover_Data_Availability.md.txt  Discover_Data_Products.md.txt  Discover_Deployments.md.txt  Discover_Device_Categories.md.txt  Discover_Locations.md.txt  Discover_Properties.md.txt  Download_Archived_Files.md.txt  Download_Data_Products.md.txt  Request_Real_Time_Data.ipynb.txt  index.md.txt
_sources/Tutorial/: index.md.txt  onc_Library_Tutorial.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/onc/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/onc/: index.html
autoapi/onc/onc/: index.html
doc/source/: API_Guide.md  conf.py
examples/bcferry/: twsb_sovi_thermosalinograph.ipynb
examples/hf_radar/: sog_hf.ipynb
onc/: __init__.py  ags.py  dap.py  nerc.py  onc.py  sos.py
onc/modules/: Exceptions.py  _DataProductFile.py  _MultiPage.py  _OncArchive.py  _OncDelivery.py  _OncDiscovery.py  _OncRealTime.py  _OncService.py  _PollLog.py  _util.py
onc/util/: util.py
src/onc/: __init__.py  onc.py
tests/: README.md  conftest.py  test_archive_files.py  test_data_product_delivery.py  test_data_product_discovery.py  test_deployments.py  test_device_categories.py  test_devices.py  test_locations.py  test_properties.py  test_realtime.py  testall  testcoverage  testsuite
tests/archive_file/: conftest.py  test_archivefile_device.py  test_archivefile_direct_download.py  test_archivefile_download.py  test_archivefile_location.py
tests/data_product_delivery/: conftest.py  test_data_product_delivery_cancel.py  test_data_product_delivery_download.py  test_data_product_delivery_order.py  test_data_product_delivery_restart.py  test_data_product_delivery_run.py  test_data_product_delivery_status.py  test_integration.py
tests/discover_data_availability/: test_data_availability.py
tests/discover_data_products/: test_data_products.py
tests/discover_deployments/: test_deployments.py
tests/discover_device_categories/: test_device_categories.py
tests/discover_devices/: test_devices.py
tests/discover_locations/: test_locations.py  test_locations_tree.py
tests/discover_properties/: test_properties.py
tests/libraries/: common.py  delivery.py  env_variable.py  expectedfields.py
tests/pytests/: conftest.py  test_data_product_delivery.py  test_data_product_discovery.py  test_deployments.py  test_locations.py  test_realtime.py
tests/raw_data/: test_rawdata_device.py  test_rawdata_location.py
tests/regression/: code_examples.py  doctest.py  tutorial.py
tests/resources/: general.robot
tests/scalar_data/: conftest.py  test_get_sensor_category_codes.py  test_scalardata_device.py  test_scalardata_location.py
tests/suites/: 00__initial.robot  01__locations.robot  02__deployments.robot  03__device_categories.robot  04__devices.robot  05__properties.robot  06__data_product_discovery.robot  07__data_product_delivery.robot  08__realtime.robot  09__archivefiles.robot
(+51 files in other folders)
